--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "hls.js": "^1.5.7",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
+    "hls.js": "^1.5.7",
     "lucide-react": "^0.292.0",
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-share": "^5.2.2",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
