--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/og": "^0.9.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "hls.js": "^1.5.7",
@@ -18,7 +19,6 @@
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-share": "^5.2.2",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
